Sales key-product, Monthly chart